# poc-local-llm

./: .gitmodules  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
etc/: mcp.yaml  models.yaml  pipeline.yaml  server.yaml
examples/: claude_desktop_config.json  mcp_client_example.py  mcp_integration.md
src/: main.py
src/pipeline/: __init__.py
src/pipeline/api/: __init__.py  app.py  middleware.py  routes.py  utils.py
src/pipeline/cli/: __init__.py  main.py  server.py
src/pipeline/config/: __init__.py  config_manager.py  settings.py
src/pipeline/inference/: __init__.py  engine.py  types.py
src/pipeline/mcp/: __init__.py  config.py  resources.py  server.py  tools.py
src/pipeline/models/: __init__.py  downloader.py  model_manager.py
